# emq

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.en.md  README.md  xmake.lua
bench/: bench_main.cpp
bindings/python/: embedmq.py  example.py  stress.py
docs/: architecture.md  todo.md
examples/pub_sub/: main.cpp
examples/req_rep/: main.cpp
include/embedmq/: config.h  embedmq.h  embedmq_c.h  platform.h  qos.h  types.h
include/embedmq/transport/: itransport.h
src/: main.cpp
src/capi/: embedmq_c.cpp
src/core/: message_bus.cpp  message_bus.h  message_codec.h  participant.cpp  qos_engine.h  retained_store.h  topic_router.h
src/discovery/: discovery_agent.cpp  discovery_agent.h  peer_registry.h
src/platform/: event_loop.h  event_loop_epoll.cpp  event_loop_io_uring.cpp  event_loop_iocp.cpp  event_loop_kqueue.cpp  process.h  socket_api.h  socket_api_posix.cpp  socket_api_win.cpp
src/transport/: shm_transport.cpp  shm_transport.h  tcp_transport.cpp  tcp_transport.h  transport_manager.cpp  transport_manager.h  udp_transport.cpp  udp_transport.h
src/util/: crc32.h  logger.h  memory_pool.h  mpsc_queue.h  ring_buffer.h  timer_wheel.h
tests/: test_capi.cpp  test_framework.h  test_last_will.cpp  test_main.cpp  test_message_codec.cpp  test_pal.cpp  test_phase3.cpp  test_pub_sub.cpp  test_qos_engine.cpp  test_refactor_v2.cpp  test_req_rep.cpp  test_retained_store.cpp  test_review_fixes.cpp  test_topic_router.cpp
tools/: measure_resources.sh
tools/emq_simnode/: main.cpp
tools/emq_stress/: main.cpp
tools/emqtop/: main.cpp
